Revision history for Perl extension PGXN-API-Searcher.

0.6.1
      - The index to query is no longer specified as the first argument to
        `search()`, but via the new `index` parameter.
      - The `index` paraemter defaults to "doc" if it's not specified.

0.6.0   2011-03-26T03:14:12
      - Initial version.